# sink

./: .gitignore  AGENTS.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.ts  technical_debt.md  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dev.yml  release.yml
assets/icon-pack/: README.txt
packaging/arch/: PKGBUILD  README.md
packaging/fedora/: README.md  sink.spec
presets/eq/: a50-game-starter.json  a50-music-starter.json  a50-voice-chat-starter.json  bass-boost.json  flat.json  fps-footsteps.json  system-soften.json  vocal-clarity.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: backend.rs  eq_import.rs  icons.rs  mod.rs  pactl.rs  presets.rs  types.rs
src-tauri/src/audio/pw_native/: dsp.rs  eq.rs  eq_chain.rs  levels.rs  meter.rs  mic.rs  mod.rs  pods.rs  ring.rs  thread.rs
src-tauri/src/commands/: apps.rs  buses.rs  channels.rs  devices.rs  eq.rs  mic.rs  mod.rs  profiles.rs  routing.rs  settings.rs
src-tauri/src/mixer/: state.rs
src-tauri/src/persistence/: active.rs  aliases.rs  assignments.rs  autostart.rs  buses.rs  channels.rs  eq.rs  eq_presets.rs  mic.rs  mod.rs  outputs.rs  prefs.rs  profiles.rs  seen.rs  wireplumber.rs
src/components/: Icons.tsx  Modal.tsx  Popover.tsx  Toggle.tsx  Tooltip.tsx
src/components/AppList/: AppIcon.tsx  AppList.tsx  AppRow.tsx  ChannelSelect.tsx  HSlider.tsx  InactiveRow.tsx
src/components/Eq/: EqBandRow.tsx  EqCurve.tsx  EqModal.tsx  EqPresetMenu.tsx
src/components/Mic/: DspSlider.tsx  MicScreen.tsx
src/components/MixerBoard/: BalanceBar.tsx  ChannelApps.tsx  ChannelStrip.tsx  ChatMix.tsx  Fader.tsx  MicStrip.tsx  MixerBoard.tsx  OutputSelect.tsx  StreamMixStrip.tsx  VuMeter.tsx
src/components/Onboarding/: OnboardingModal.tsx
src/components/Settings/: SettingsScreen.tsx
src/components/TitleBar/: ProfileMenu.tsx  TitleBar.tsx
src/hooks/: useAudio.ts
src/lib/: audio.test.ts  audio.ts  eqMath.test.ts  eqMath.ts  format.ts
src/store/: mixer.test.ts  mixer.ts
src/styles/: globals.css
src/types/: index.ts
