[package]
name = "sink"
version = "0.1.0"
description = "Linux-native audio routing and mixing for PipeWire"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-only"

[lib]
name = "sink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
