[package]
name = "sink"
version = "0.1.0"
description = "Linux-native audio routing and mixing for PipeWire"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-only"

[lib]
name = "sink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
# 0.8.0 on crates.io predates PipeWire 1.6 headers (libspa bindgen breaks);
# git main carries the header fixes. v0_3_49 gates Buffer::requested().
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", rev = "v0.9.2", features = ["v0_3_49"] }
